<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.obmc</groupId>
  <artifactId>OBAmazeingTimer</artifactId>
  <name>OBAmazeingTimer</name>
  <version>1.4</version>
  <description>Timer for solving A-Maze-Ing maze on the build server and recording attempt times on signs</description>
  <url>http://ob-mc.net</url>
  <packaging>jar</packaging>

  <properties>
    <api-version>1.21</api-version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>

    <finalName>${project.name}-${project.version}</finalName>

    <!-- ensure .yml files gets the project properties populated -->
    <resources>
      <resource>
        <targetPath>.</targetPath>
        <filtering>true</filtering>
        <directory>${basedir}/src/main/resources/</directory>
        <includes>
          <include>*.yml</include>
        </includes>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>21</source>
          <target>21</target>
          <compilerArgs>
            <arg>-Xlint:-options</arg>
            <arg>-proc:full</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
  	<repository>
      <id>papermc</id>
      <url>https://repo.papermc.io/repository/maven-public/</url>
    </repository>
  	<repository>
    	<id>jetbrains repo</id>
        <url>https://mvnrepository.com/artifact/org.jetbrains/annotations</url>
    </repository>
  	<repository>
    	<id>apache lang</id>
        <url>https://mvnrepository.com/artifact/org.apache.commons/commons-lang3</url>
    </repository>
  </repositories>
    
  <dependencies>
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>1.21.5-R0.1-SNAPSHOT</version>
    </dependency>
    <dependency>
    	<groupId>org.jetbrains</groupId>
    	<artifactId>annotations</artifactId>
    	<version>26.0.1</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.commons</groupId>
    	<artifactId>commons-lang3</artifactId>
    	<version>3.17.0</version>
	</dependency>
	<dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>2.15.2</version>
    </dependency>
  </dependencies>

</project>
